--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,7 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Mon Jun 12 22:06:58 CST 2017
-sdk.dir=/Users/ansen/Library/Android/sdk
+# For customization when using a Version Control System, please read the
+# header note.
+#Mon Mar 16 13:34:36 CST 2020
+sdk.dir=/Users/cy/Library/Android/sdk
